test: add unit tests for permission mapping and dashboard services, enhance pricing component tests